--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
          <li> Vagrant </li>
          <li> Docker </li>
          <li> Ansible </li>
-         <li> Integración continUa </li>
+         <li> Integración continUa  productividad en el desarrollo de software </li>
      </ul>
 </body>
 </html>
